  * remove rebuilding-raid.html (had invisible refs) and
    RAID5_versus_RAID10.txt docs.  Maybe it's a good idea to remove
    other docs shipped with the package, since these becoming stale
    and these days, better alternatives exist online
  * removed debian-specific mdadm-startall script which does nothing more than
    "mdadm --assemble --scan".  Remove docbook-to-man from build-deps.

 -- Michael Tokarev <mjt@tls.msk.ru>  Sat, 20 Sep 2014 08:49:59 +0400

mdadm (3.3-2) unstable; urgency=low

  * use 63-md-raid-arrays.rules instead of old 64-md-raid.rules
    (Closes: #726237)
  * do not use builtin blkid in udev rules, as our udev (at least
    on wheezy) does not have it (use-external-blkid.diff)

 -- Michael Tokarev <mjt@tls.msk.ru>  Mon, 14 Oct 2013 15:49:54 +0400

mdadm (3.3-1) unstable; urgency=low

  [ Michael Tokarev ]
  * new upstream 3.3 release (Closes: #718896)
    See ANNOUNCE-3.3 for details.
    Patches:
    - refreshed debian-conffile-location.diff
      (added .conf.d)
    - removed debian-disable-udev-incr-assembly.diff
      (do not ship udev-md-raid-assembly.rules for now)
    - refreshed debian-no-Werror.diff
    - refreshed sha1-includes.diff
    - removed patches (included upstream)A:
       spelling-and-manpages.patch
       fix-enough-function-for-RAID10.patch
       fix-segfaults-in-detail.patch
       super0-do-not-override-uuid-with-homehost.patch
       mdmon-allow-takeover-when-original-was-started-with-.patch
       mdmon-fix-arg-parsing.patch
       mdmon-fix-arg-processing-for-a.path
    Install udev-md-raid-arrays.rules instead of udev-md-raid.rules,
    don't install new udev-md-raid-assembly.rules for now.
  * remove Martin F. Krafft from uploaders per his request.
    Thank you for your contributions!
  * added remove-bashism-from-makefile.patch patch to work around
    newly introduced bashism
  * remove debian/source/options, there's no need to set compression
    options for debian.tar.gz.